# AMS02antiprotonLikelihood

./: .readthedocs.yaml  DRN_interface.py  MANIFEST.in  MockAnalysis.ipynb  README.md  banner.py  check.ipynb  check.py  drn_xcheck.ipynb  pbarlike-gambit-interface.py  pbarlike.py  performance.ipynb  preamble.py  pyproject.toml  residuals.ipynb  setup.cfg  tests.py  x_check.ipynb
docs/: Doxyfile
docs/html/: annotated.html  classDRN__interface_1_1DRNet-members.html  classDRN__interface_1_1DRNet.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  index.html  md__users_ttp_sbalan_Research_pbarlike_src_README.html  pages.html
docs/html/search/: all_0.js  classes_0.js  searchdata.js
docs/latex/: annotated.tex  classDRN__interface_1_1DRNet.tex  md__users_ttp_sbalan_Research_pbarlike_src_README.tex  refman.tex
docs/source/: conf.py  dependencies.rst  gambit_interface.rst  index.rst  requirements.txt
pbarlike/: __init__.py  banner.py  convenience_functions.py  data.py  drn_interface.py  gambit_interface.py  likelihoods.py  pbarlike-gambit-interface.py  pbarlike.py  preamble.py  propagation.py  solar_modulation.py
