[metadata]
name = pbarlike
version = 1.0.0 
author = Sowmiya Balan
author_email = sowmiya.balan@kit.edu
# url = https://github.com/Sabb95/zTOx
description = 'A package that will convert redshift to distances'
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
install_requires = 
        numpy
        tensorflow
        iminuit<2
python_requires = >=3.6
include_package_data = True